force-app/main/default/objects/VoC__c/VoC__c.object-meta.xml
<CustomObject>
    <description>VoC 관련 Object</description>
    <label>VoC</label>
    <nameField>
        <displayFormat>VoC-{000000}</displayFormat>
        <label>VoC 번호</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>