force-app/main/default/objects/VoC__c/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>account에서 고객명을 lookup해서 가져옴</description>
    <label>고객명</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.AccountType__c</field>
            <operation>equals</operation>
            <value>구매고객</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>VoC</relationshipLabel>
    <relationshipName>VoC</relationshipName>
    <type>Lookup</type>
</CustomField>