force-app/main/default/objects/VoC__c/fields/ClosedDate__c.field-meta.xml
<CustomField>
    <fullName>ClosedDate__c</fullName>
    <description>상담마감일자(자동기입)</description>
    <label>상담마감일자</label>
    <type>Date</type>
</CustomField>