force-app/main/default/objects/VoC__c/fields/ContactPhone__c.field-meta.xml
<CustomField>
    <fullName>ContactPhone__c</fullName>
    <description>고객 전화번호</description>
    <label>고객 전화번호</label>
    <type>Phone</type>
</CustomField>