force-app/main/default/objects/VoC__c/fields/CreatedDate__c.field-meta.xml
<CustomField>
    <fullName>CreatedDate__c</fullName>
    <description>상담시작일자(자동기입)</description>
    <label>상담시작일자</label>
    <type>Date</type>
</CustomField>