force-app/main/default/objects/VoC__c/fields/SalesBranch__c.field-meta.xml
<CustomField>
    <fullName>SalesBranch__c</fullName>
    <formula>AccountId__r.FirstBranch__r.Name</formula>
    <label>판매점</label>
    <type>Text</type>
</CustomField>