force-app/main/default/objects/VoC__c/fields/VoCProgress__c.field-meta.xml
<CustomField>
    <fullName>VoCProgress__c</fullName>
    <description>상담진행현황</description>
    <inlineHelpText>해당 상담자가 문제를 해결할 수 없는경우, CS 노트북팀에게 상담을 이관해야하는 경우에는 &apos;상담진행 / 상담이관&apos;을 선택하여 저장해야함.</inlineHelpText>
    <label>상담 진행현황</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>상담시작</fullName>
                <default>true</default>
                <label>상담시작</label>
            </value>
            <value>
                <fullName>상담진행 / 상담이관</fullName>
            </value>
            <value>
                <fullName>상담종료</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>