force-app/main/default/objects/VoC__c/fields/VoCType__c.field-meta.xml
<CustomField>
    <fullName>VoCType__c</fullName>
    <label>상담유형</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>단순문의</fullName>
            </value>
            <value>
                <fullName>고장</fullName>
            </value>
            <value>
                <fullName>교환</fullName>
            </value>
            <value>
                <fullName>환불</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>