force-app/main/default/objects/VoC__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>AccountId__c</columns>
    <columns>CreatedDate__c</columns>
    <columns>VoCProgress__c</columns>
    <columns>ContactPhone__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>