force-app/main/default/objects/VoC__c/listViews/sangdamend.listView-meta.xml
<ListView>
    <fullName>sangdamend</fullName>
    <columns>NAME</columns>
    <columns>AccountId__c</columns>
    <columns>CreatedDate__c</columns>
    <columns>ClosedDate__c</columns>
    <columns>VoCProgress__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>VoCProgress__c</field>
        <operation>equals</operation>
        <value>상담종료</value>
    </filters>
    <label>상담종료</label>
</ListView>