force-app/main/default/objects/VoC__c/listViews/sangdamstart.listView-meta.xml
<ListView>
    <fullName>sangdamstart</fullName>
    <columns>NAME</columns>
    <columns>AccountId__c</columns>
    <columns>CreatedDate__c</columns>
    <columns>ClosedDate__c</columns>
    <columns>VoCProgress__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>VoCProgress__c</field>
        <operation>equals</operation>
        <value>상담시작</value>
    </filters>
    <label>상담시작</label>
</ListView>